# crucible

./: .env.example  .gitignore  Anchor.toml  CONCEPT.md  DEMO_SCRIPT.md  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/leaderboard/: page.tsx
app/src/app/matches/: page.tsx
app/src/app/matches/[id]/: page.tsx
app/src/components/: CreateMatchModal.tsx  MatchCard.tsx  MatchViewer.tsx  Navbar.tsx  WalletProvider.tsx
app/src/hooks/: useCrucibleProgram.ts  useMatches.ts
app/src/lib/: idl.json  mock-data.ts  types.ts
programs/crucible-escrow/: Cargo.toml
programs/crucible-escrow/src/: lib.rs  state.rs
programs/crucible-escrow/src/instructions/: accept_match.rs  cancel_match.rs  create_match.rs  initialize.rs  mod.rs  settle_match.rs
scripts/: create-drift-vault.ts  initialize.ts  mint-test-usdc.ts  package-lock.json  package.json  read-vault-equity.ts  run-live-competition.ts  test-match.ts  tsconfig.json
