[package]
name = "crucible-escrow"
version = "0.1.0"
description = "On-chain escrow for Crucible match stakes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crucible_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
